<resources>
    <string name="app_name">StoryHappy</string>
    <string name="label_title_welcome_page">Welcome to StoryHappy App!</string>
    <string name="label_check_input">Check your input, please</string>
    <string name="label_title_register_page">Yuk, lengkapi data dirimu di bawah ini!</string>
    <string name="label_title_login_page">Sudah siap berbagi cerita kamu?</string>
    <string name="label_message_login_page">Masukkan datamu ya!</string>
    <string name="label_story_name">Story Name</string>
    <string name="label_created_at">Created At</string>
    <string name="label_register_for_account">Belum punya akun? register di sini!</string>
    <string name="label_login_insted">Sudah punya akun? login di sini!</string>
    <string name="label_description">Lorem Ipsum</string>
    <string name="label_description_hint">description</string>
    <string name="label_take_your_image">Take your image</string>
    <string name="label_uploading">Uploading…</string>
    <string name="label_storyhappy_logo">StoryHappy Logo</string>
    <string name="label_preview_image">Preview Image</string>

    <string name="action_login">LOGIN</string>
    <string name="action_register">REGISTER</string>
    <string name="action_logout">Logout</string>
    <string name="action_camera">CAMERA</string>
    <string name="action_gallery">GALLERY</string>
    <string name="action_upload">Upload</string>
    <string name="action_choose_picture">Choose a picture</string>
    <string name="action_fab_upload_activity">Upload Story</string>
    <string name="action_btn_maps">Move to Maps Activity</string>

    <string name="hint_name">Nama</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="error_bad_request">Bad Request</string>
    <string name="error_login_fail">Login Failed</string>
    <string name="error_no_permission">Tidak mendapatkan permission.</string>
    <string name="error_no_image">No image, take image to upload</string>
    <string name="error_no_description">No description, write one to upload</string>
    <string name="error_can_not_load_data">Can not load data</string>
    <string name="error_email_invalid">Please enter a valid email</string>
    <string name="error_password_invalid">Password must be at least 8 characters long</string>
    <string name="retry">Coba lagi</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>