<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.upload.UploadActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/previewImageView"
        android:layout_width="330dp"
        android:layout_height="320dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        tools:srcCompat="@drawable/ic_image" />

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="22dp"
        android:backgroundTint="@color/toska10"
        android:text="@string/action_camera"
        android:textColor="@color/toska80"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:backgroundTint="@color/toska10"
        android:text="@string/action_gallery"
        android:textSize="16sp"
        android:textColor="@color/toska80"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionStory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/label_description_hint"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="40dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addDescriptionStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:lines="4" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/uploadButton"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/toska80"
        android:text="@string/action_upload"
        android:textColor="@color/toska10"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionStory" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.6"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>