<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/img_storyhappy_logo"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_storyhappy_logo" />

    <TextView
        android:id="@+id/tv_welcome"
        android:alpha="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_title_welcome_page"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal" />

    <Button
        android:id="@+id/btn_login"
        android:alpha="0"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/toska80"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/action_login"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <Button
        android:id="@+id/btn_register"
        android:alpha="0"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/toska20"
        android:text="@string/action_register"
        android:textColor="@color/toska80"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>